--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -25,8 +25,6 @@ backend app-servers
     mode http
     balance roundrobin
     option forwardfor
-    server app1 app1.{{GUID}}.internal:8080 cookie app1 check
-    server app2 app2.{{GUID}}.internal:8080 cookie app2 check
-###{% for app in groups.apps %}
-###    server {{ app }} {{ hostvars[app]['ansible_hostname'] }}:8080 cookie {{ app }} check
-###{% endfor %}
+{% for app in groups.apps %}
+    server {{ hostvars[app]['ansible_hostname'] }} {{ app }}:8080 cookie {{ hostvars[app]['ansible_hostname'] }} check
+{% endfor %}
